* "Graph All" now works properly even when there are a large number of resources to graph.
* Node, interface, and service meta-data is now configurable in the requisition UI.
* The Backshift graph zooming regression introduced with the web asset refactor has been fixed.
* The rendered graph page can now be searched/filtered to pare down results, and graphs are now lazily loaded.
* The alarm list can now be filtered by surveillance category.

==== Development Considerations

* The https://github.com/OpenNMS/opennms-integration-api#opennms-integration-api-[OpenNMS Integration API] now supports processing thresholds.

==== Internals

A ton of other internal improvements have been made:

* The complete node object is now exposed to Scriptd and script policies.
* A bunch more things have been added to the Karaf `health:check` command-line.
* Elasticsearch client performance has been improved by enabling compression where possible.
* A new DNS resolution service has been introduced internally that should speed up hostname lookups.
* A new key/value store was added, for internal use in things like thresholding persistence and user session data.
* The `snmp-config.xml` file now supports "profiles" for influencing the behavior of IPs that don't match existing definitions.
  For details, see link:https://docs.opennms.org/opennms/releases/latest/guide-admin/guide-admin.html#_snmp_profiles[the Admin Guide section on SNMP Profiles].
* Our embedded Drools has been updated to the latest 7.x release.
* More instrumentation has been added to the Jaeger OpenTracing support introduced in Horizon 24.
* A ton of performance improvements have been made in various parts of the codebase.
* 2 new roles have been added:
  * `ROLE_REPORT_DESIGNER` - use the ReST APIs or UI for manipulating reports and report schedules
  * `ROLE_FLOW_MANAGER` - use the Rest APIs or UI for managing flow classification rules