@@ -93,6 +93,14 @@ public class CollectionSetMapper {
                                 nodeCriteria);
                         interfaceResourceBuilder.setNode(nodeResourceBuilder);
                         interfaceResourceBuilder.setInstance(resource.getInterfaceLabel());
+                        // See NMS-13185
+                        if (!Strings.isNullOrEmpty(resource.getInstance())) {
+                            CollectionSetProtos.StringAttribute.Builder attributeBuilder = CollectionSetProtos.StringAttribute
+                                    .newBuilder();
+                            attributeBuilder.setValue(resource.getInstance());
+                            attributeBuilder.setName("__ifIndex");
+                            collectionSetResourceBuilder.addString(attributeBuilder);
+                        }
                         collectionSetResourceBuilder.setInterface(interfaceResourceBuilder);
                     }
                 } else if (resource.getResourceTypeName().equals(CollectionResource.RESOURCE_TYPE_LATENCY)) {
